fix(image): broken css for fullscreen mode

--- a/web-app/style.css
+++ b/web-app/style.css
@@ -6,40 +6,42 @@
 * {
     overflow: hidden;
     margin: 0;
-    background-color: black;
     box-sizing: border-box;
 }
+
 
 /* ========================     */
 /* STYLED IDs                   */
 /* ========================     */
 
 #slideshow-layout {
-    width: 100vw;
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
-    text-align: center;
 }
 
-#slideshow-image {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: auto;
-    max-width: 100%;
-    height: auto;
-    max-height: 100%;
-}
 
 #background-image {
-    z-index: -1;
     filter: blur(20px);
     -webkit-filter: blur(20px);
-    height: 200%;
+    height: 125vh;
+    width: 100%;
+    position: absolute;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    top: 50%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+#slideshow-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* This makes sure the image maintains its aspect ratio */
+    z-index: 2;
 }
 
 #hide-current-image {
@@ -69,6 +71,7 @@
     text-align: left;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
+    z-index: 2;
 }
 
 .weather {
@@ -77,6 +80,7 @@
     right: 3vh;
     text-align: right;
     background: transparent;
+    z-index: 2;
 }
 
 .weather-label {
@@ -88,6 +92,7 @@
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
     flex-grow: 0;
+    z-index: 2;
 }
 
 .weather > * {
